SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- xx/xx/2010, version 1.15 (1.3.2, 1.1.6, 1.1.4, 1.1.2): debrouxl
	- change encoding in .rc file.
	- update three files left over from the translation update in TILP II 1.14.
	- GUI improvements by Jon Sturm.
	- fixes for the TI-83+ series: no OS version checking is necessary for the
	  del_var and clock operations, because they are already covered by the OPS_*
	  model checks (reported by Jon Sturm)
	- remove unused TI-8x OS version checking code.
	- require AMS >= 2.09 for folder creation on the TI-68k series.

- 08/04/2010, version 1.14 (1.3.1, 1.1.5, 1.1.3, 1.1.1): debrouxl
	- minor documentation updates.
	- updated translations.
	- updated existing InnoSetup script, created cross-compilation InnoSetup script.
	- removed usage of deprecated GTK functions
	- updated tilp.desktop file, contributed by Jon Sturm.
	- updated tilp.rc file.
	- updated to Autoconf 2.65.

- 01/06/2009, version 1.13 (1.3.0, 1.1.4, 1.1.2, 1.1.0): roms
    - merged Lionel's patch: add some new & shorter command line flags 
	for use by GCC4TI
	- changed location of "My TI Files" folder (Vista)
	- replaced obselete function used in the drive list menu (Vista)
	- fixed bug #2146886: "Crash when auto-detecting device"
	- removed obsolete virtual link cable
	- upgraded deprecated GTK+ code
	
- 13/08/2008, version 1.12: (1.2.0, 1.1.3, 1.1.1, 1.0.6): roms
	- added NSpire OS1.4 support

- 11/03/2008, version 1.11: (1.2.0, 1.1.2, 1.1.1, 1.0.6): roms
	- fixed various bug crashes due to non NULLified pointers in 
	pbar structure.
	- don't check whether calc is ready before doing a screenshot. Avoid to
		return to HOME.
	- force ready check when sending NSpire OS
	=> released on 28/03/2008

- 26/01/2008, version 1.10b: (1.2.0, 1.1.2, 1.1.0, 1.0.6): roms
	- fixed InnoSetup installer for use with GTK+ >= 2.10.x
	
- 16/10/2007, version 1.10: (1.2.0, 1.1.0, 1.1.0, 1.0.6): roms
	- adding NSpire support