@@ -1,0 +1,7 @@
+if OS_WIN32
+  wiconsdir = $(datadir)/icons
+  dist_wicons_DATA = *.png
+  EXTRA_DIST = README
+else
+  EXTRA_DIST = *.png README
+endif
